[package]
name = "spike-rust-sqlcipher-test"
version = "0.1.0"
authors = ["neonphog <neonphog@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.19"
ghost_actor = "0.3.0-alpha.1"
rand = "0.7.3"
rusqlite = { version = "0.24.1", features = [
  "blob",        # better integration with blob types (Read, Write, etc)
  "chrono",      # integration with chrono crate
  "functions",   # rust scalar / agg / window functions
  "hooks",       # sqlite notification callbacks
  "serde_json",  # integration with serde_json crate
  "sqlcipher",   # enable at-rest encryption
  "url",         # integration with url crate
  "uuid",        # integration with uuid crate
] }
tokio = { version = "0.3.5", features = [ "full" ] }
